# Flash-Attention-Residuals

./: README.md  backward_kernels.py  backward_kernels_cleaned.py  forward_kernels.py  forward_kernels_cleaned.py  forward_kernels_output.txt  pyproject.toml
benchmarks/: bench.py  bench_output.txt
src/flash-attn-res/: __init__.py
src/flash-attn-res/experimental/: autograd.py
src/flash-attn-res/kernels/: phase_1.py  phase_2.py  reduce.py
src/flash-attn-res/ops/: phase_1.py  phase_2.py
src/flash_attn_res/experimental/: autograd.py  torch.py
src/flash_attn_res/kernels/: phase_1.py  phase_2.py
src/flash_attn_res/ops/: phase_1.py  phase_2.py
