[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flash-attn-res"
version = "0.1.8"
description = "Attention Residuals (AttnRes) kernels"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "William Bui" }]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "torch",
  "triton",
]

[project.urls]
Homepage = "https://github.com/catswe/Flash-Attention-Residuals"
Issues = "https://github.com/catswe/Flash-Attention-Residuals/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flash_attn_res"]